--- a/.env.example
+++ b/.env.example
@@ -21,5 +21,5 @@ NEXTAUTH_SECRET=""
 NEXTAUTH_URL="http://localhost:3000"
 
 # Next Auth Google Provider
-GOOGLE_CLIENT_ID=""
-GOOGLE_CLIENT_SECRET=""
+GITHUB_CLIENT_ID=""
+GITHUB_CLIENT_SECRET=""
