--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@trpc/next": "^10.26.0",
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
+    "flowbite": "^1.7.0",
+    "flowbite-react": "^0.4.11",
     "next": "^13.4.2",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
   },
